# corlinman

./: .dockerignore  .gitignore  .importlinter  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  index.html  package.json  pnpm-lock.yaml  pyproject.toml  wiki.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-status-labels.yml  release-image.yml
agents/: general-purpose.yaml
assets/cr/: manifest.json
audit/: ABSORB_MATRIX_2026-07-02.md  ARCH_DEBT.md  BUG_LEDGER_2026-07-02.md  FINAL_REPORT.md  FRONTEND_UIX_2026-07-17.md  GAP_CLOSE_2026-07-08.md  ISSUES.md  PLAN_multiagent_fix.md  PLAN_three_fixes.md  PROGRESS.md  multiagent_confirmed.json
audit/audit-2026-05-31/: PLAN.md
audit/chat-perfect-2026-06-11/: explore-5-problems.json  hunt-51-findings.json
audit/evidence/round-5/: RECON_FINDINGS.md
audit/evidence/round-6/: RECON_FINDINGS.md
audit/gap-fill-2026-05-30/: GAP_REPORT.md  OPEN_WORKLIST.md  gaps.json
audit/grantley-migration-2026-06-04/: FINDINGS.md  MIGRATION_PLAN.md  R8_OPEN_QUESTIONS_ANSWERED.md  R8_SELF_EVOLUTION_DESIGN.md  VERIFICATION_REPORT.md  audit_findings.json  gap_audit_raw.json  grantley_persona_full.json  prod_daily_job.json
audit/grantley-migration-2026-06-04/openclaw/: openclaw_extensions.txt  openclaw_workspace_bundle.txt
audit/landing-redesign-2026-06-13/: build_prod.py  compare.html  gen_sprites.py  index_prod.html  process_sprites.py  shoot.py  shoot3d.py  shootfilm.py  shootfinal.py  shootfinal2.py  shootlang.py  shootopen.py  verify_shoot.py  wiki.html
audit/landing-redesign-2026-06-13/gen2/: _genlog.txt  _genlog2.txt
deploy/: .env.template  AI_DEPLOY.md  corlinman-upgrader.sh  install.sh  server-bootstrap.sh
docker/: Dockerfile  start.sh  upgrade_helper.py
docker/compose/: docker-compose.qq.yml  docker-compose.sandbox.yml  docker-compose.selfupdate.yml  docker-compose.yml
docs/: GAP_ANALYSIS_HERMES_OPENCLAW.md  PLAN_AGENT_CAPABILITY_FUSION.md  PLAN_AGENT_PARITY_IMPL.md  PLAN_AGENT_STATUS_CARD.md  PLAN_AUTO_UPDATE.md  PLAN_CHANNELS_COMPLETION.md  PLAN_CHAT_PERFECT.md  PLAN_CLAUDECODE_PARITY.md  PLAN_CLI_CONSOLE.md  PLAN_DEPLOY_UX.md  PLAN_DYNAMIC_SUBAGENTS.md  PLAN_EASY_SETUP.md  PLAN_FIRST_RUN_WIZARD.md  PLAN_HARDWARE_INTEGRATION.md  PLAN_HOOKS_DECLARATIVE.md  PLAN_IN_APP_CHAT.md  PLAN_MARKETPLACE.md  PLAN_MCP_SAMPLING_LISTCHANGED.md  PLAN_MULTI_AGENT.md  PLAN_ONE_CLICK_UPGRADE.md  PLAN_PERSONA_LIFE_QZONE_MIGRATION.md  PLAN_PERSONA_STUDIO.md  PLAN_PORT_COMPLETION.md  PLAN_PROVIDER_AUTH.md  PLAN_SKILL_HUB.md  PLAN_TASK_CONTINUITY.md  PLAN_TASK_OBSERVABILITY.md  PLAN_UI_FIXES.md  PLAN_decompose_cores.md  PROMPT_CLI_CLAUDECODE_CLASS.md  PROMPT_ZERO_BUG_PARITY.md  README.md  RESEARCH_AGENT_PARITY.md  RUNBOOK_VPS_PROD_UPDATE.md  TODO_FOLLOWUPS.md  architecture-modules.md  architecture.md  ci-status.md  config.example.toml  credentials.md  (+20 more)
docs/design/: agent-brain-memory-curator-task-plan.md  phase4-next-tasks.md  phase4-roadmap.md  phase4-w2-b2-design.md  phase4-w3-c1-design.md
docs/guides/: skills-and-agents.md
docs/superpowers/plans/: 2026-05-20-audit-remediation.md  2026-06-06-napcat-managed-adapter.md
docs/superpowers/specs/: 2026-06-06-napcat-managed-adapter-design.md
marketplace/: ATTRIBUTION.md  README.md  index.json
marketplace/mcp/brave-search/: manifest.json
marketplace/mcp/context7/: manifest.json
marketplace/mcp/echo-mcp/: manifest.json
marketplace/mcp/everything/: manifest.json
marketplace/mcp/fetch/: manifest.json
marketplace/mcp/filesystem/: manifest.json
marketplace/mcp/firecrawl/: manifest.json
marketplace/mcp/git/: manifest.json
marketplace/mcp/github/: manifest.json
marketplace/mcp/gitlab/: manifest.json
marketplace/mcp/google-maps/: manifest.json
marketplace/mcp/memory/: manifest.json
marketplace/mcp/playwright/: manifest.json
marketplace/mcp/postgres/: manifest.json
marketplace/mcp/puppeteer/: manifest.json
marketplace/mcp/redis/: manifest.json
marketplace/mcp/sentry/: manifest.json
marketplace/mcp/sequential-thinking/: manifest.json
marketplace/mcp/slack/: manifest.json
marketplace/mcp/sqlite/: manifest.json
marketplace/mcp/time/: manifest.json
marketplace/scripts/: build-registry.py  seed.py  validate-index.py
scripts/: dev-setup.sh  gen-proto.sh  gh_publish_v1.12.0.sh
ui/: README.md  next.config.ts  package.json  playwright.config.ts  tailwind.config.test.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
ui/app/: fonts.ts  globals-glass-vars.test.ts  globals.css  layout.tsx  not-found.test.tsx  not-found.tsx
ui/app/(admin)/: layout.tsx  (+2 more)
ui/components/: cmdk-palette.test.tsx  cmdk-palette.tsx  dynamic-params-form.tsx  providers.test.tsx  providers.tsx
ui/lib/: accent.test.ts  accent.ts  api.baseurl.test.ts  api.skills.test.ts  api.ts  auth.ts  cron-schedule.test.ts  cron-schedule.ts  dev-mode.test.ts  dev-mode.ts  format.ts  i18n.test.ts  i18n.ts  motion.ts  nav-registry.test.ts  nav-registry.ts  sse.test.ts  status.ts  theme-studio.test.ts  theme-studio.ts  tint.test.ts  tint.ts  use-specular.ts
ui/scripts/: assert-routes-built.mjs  screenshot-sweep.mjs  tp-to-sg-rename.sh
ui/tests/: a11y-audit.test.tsx  screenshot-relief.mjs
video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json  tsconfig.tsbuildinfo
video/src/: Root.tsx
(+521 files in other folders)
