[project]
name = "corlinman"
version = "1.28.2"
description = "Python AI plane for corlinman (LLM providers, agent reasoning)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "corlinman contributors" }]

# Meta-package: depends on every workspace member so `uv sync` installs them
# all into the virtualenv for development. Individual publishing happens
# per-package.
dependencies = [
    "corlinman-grpc",
    "corlinman-providers",
    "corlinman-agent",
    "corlinman-server",
    "corlinman-tagmemo",
    "corlinman-evolution-engine",
    "corlinman-user-model",
    "corlinman-persona",
    "corlinman-episodes",
    "corlinman-goals",
    "corlinman-agent-brain",
    "corlinman-memory-kernel",
]

[tool.uv.sources]
corlinman-grpc = { workspace = true }
corlinman-providers = { workspace = true }
corlinman-agent = { workspace = true }
corlinman-server = { workspace = true }
corlinman-tagmemo = { workspace = true }
corlinman-evolution-engine = { workspace = true }
corlinman-user-model = { workspace = true }
corlinman-persona = { workspace = true }
corlinman-episodes = { workspace = true }
corlinman-goals = { workspace = true }
corlinman-agent-brain = { workspace = true }
corlinman-memory-kernel = { workspace = true }

[tool.uv.workspace]
members = ["python/packages/*"]
exclude = ["python/packages/corlinman-embedding"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.0",
    "respx>=0.21",
    "syrupy>=4.1",
    "ruff>=0.8",
    "mypy>=1.11",
    # Pin exact versions so `scripts/gen-proto.sh` produces byte-identical stubs
    # across dev machines and CI. Drift in either of these breaks the
    # `proto-sync` CI job. Bump together and regenerate stubs in the same PR.
    "grpcio-tools==1.80.0",
    "protobuf==6.33.6",
    "import-linter>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Generated protobuf stubs are never linted; they are regenerated from .proto
# by `scripts/gen-proto.sh` and formatted with `ruff format`, but the shape
# of grpcio-tools' output trips many style rules.
extend-exclude = ["**/_generated/**", "audit/**"]

[tool.ruff.lint]
external = ["BLE001","PLC0415","E402","N818","ARG002","ARG001","SLF001","D401","A001","A002","A004","N801","N802","PLW0603","B017","S101","S105","S603","C901","ANN001","ANN002","ANN003"]
# Enforce the bug-catching families. `N` (pep8-naming) and `SIM` (flake8-simplify)
# were selected but never enforced (150+ standing violations of the codebase's
# deliberate domain naming + explicit-control-flow style) — dropped so the gate
# reflects what is actually enforced rather than aspirational style.
select = ["E", "F", "I", "UP", "B", "A", "C4", "RUF"]
ignore = [
    "E501",   # line length — the formatter owns wrapping
    "E402",   # module-import-not-at-top: the gateway uses intentional lazy/conditional imports
    "RUF001", "RUF002", "RUF003",  # ambiguous-unicode: false positives on legitimate CJK prompt/doc content
    "A002", "A004",  # builtin shadowing on params/imports (id/type/input/format) — common, intentional API naming
    "B008",   # function-call-in-default: the FastAPI Depends()/Query()/Path() dependency-injection pattern
    "B017",   # pytest.raises(Exception): test-only, team-accepted (also in `external`)
    "UP042",  # str-enum->StrEnum: behavior-changing (str(member) value vs repr) — not worth the modernization risk
    "UP046", "UP047",  # PEP-695 generic syntax: optional modernization; the module-level TypeVar pattern is valid
]

[tool.ruff.lint.per-file-ignores]
# Prompts and test fixtures legitimately contain CJK punctuation
# (FULLWIDTH COMMA / COLON / EN DASH etc.); RUF001 flags these as
# "ambiguous" but here they're part of the natural-language content.
"python/packages/corlinman-user-model/src/corlinman_user_model/distiller.py" = ["RUF001"]
"python/packages/corlinman-user-model/tests/test_distiller.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
# Start lenient so CI can go green while the Python plane is still landing;
# individual packages can opt into strict mode via their own mypy overrides.
# TODO(M7): flip back to `strict = true` once all packages pass.
strict = false
ignore_missing_imports = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "^python/packages/[^/]+/tests/",
    "_generated/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Use importlib so duplicate module names (e.g. ``tests/``) across uv workspace
# members don't collide in ``sys.modules``.
addopts = "--import-mode=importlib"
# Per-test watchdog — a hung test FAILS with a dump instead of wedging
# the suite to the CI 6h cap (thread method fires even when the event
# loop itself is blocked).
timeout = 180
timeout_method = "thread"
consider_namespace_packages = true
markers = [
    "live_llm: tests that hit real LLM APIs (cost money)",
    "live_transport: tests that need real channel endpoints",
    "integration: tests that spin real in-process gRPC servers",
    "slow: tests that take noticeable wall-clock (e.g. multi-DB E2E)",
]
